@@ -4,7 +4,8 @@
 
 * Development
 
-- New option ~dicom-thumb-height~.
+- ~dicom-next~, ~dicom-previous~: New commands to move to next or previous image.
+- ~dicom-thumb-height~: New option to configure thumbnail image pixel height.
 - Use ~dcm2img~ instead of deprecated ~dcmj2pnm~.
 - Improve handling of DICOM files with invalid encoding. Use Emacs encoding
   conversion instead of ~--convert-to-utf8~ from ~dcm2xml~.
